// ============================================================
// M3 — Solicitações / Workflow Engine (as-built Flyway V004+V018+V019)
// Fonte: backend/app/src/main/resources/db/migration/
//        V004__solicitacoes_schema.sql
//        V018__request_attachment_event_updated_at.sql
//        V019__request_type_versioning.sql
//        foundationDocs/analysis/as-built-backend.md §5
//
// 4 tabelas V004 + request_type_version (V019).
// SEM request_line_item (linhas em request.dados JSONB).
// Authorities de transição vivem em workflow_json (sem colunas interna/required_auth).
// I11-a (status em attachment): decisão TCC 2026-06 — NÃO materializada no Flyway V004.
// ============================================================

Table request_type {
  id            uuid         [pk, not null]
  code          varchar(60)  [unique, not null, note: 'ADIANTAMENTO_PERIODO, APROVEITAMENTO_DISCIPLINA... (19 tipos)']
  descricao     varchar(200) [not null]
  form_schema   jsonb        [not null, default: `'{}'`, note: 'JSON Schema Draft-07 — campos do formulário dinâmico']
  workflow_json jsonb        [not null, default: `'{}'`, note: 'state machine: { initial, states[], transitions[] }; authorities nas transições']
  prazo_dias    integer      [not null, default: 10]
  ativo         boolean      [not null, default: true]
  created_at    timestamptz  [not null, default: `now()`]
  updated_at    timestamptz  [not null, default: `now()`]

  Note: 'V004: sem colunas interna / required_auth'
}

Table request_type_version {
  id              uuid         [pk, not null]
  id_request_type uuid         [not null, ref: > request_type.id]
  version         integer      [not null]
  form_schema     jsonb        [not null]
  workflow_json   jsonb        [not null]
  published_at    timestamptz  [not null, default: `now()`]
  created_at      timestamptz  [not null, default: `now()`]
  updated_at      timestamptz  [not null, default: `now()`]

  Indexes {
    (id_request_type, version) [unique]
    id_request_type [name: "idx_request_type_version_type"]
  }

  Note: 'V019 — snapshot imutável no publish'
}

Table request {
  id                       uuid         [pk, not null]
  numero_anual             integer      [not null, note: 'sequência reiniciada por ano']
  ano                      smallint     [not null]
  id_request_type          uuid         [not null, ref: > request_type.id]
  request_type_code        varchar(60)  [not null]
  id_solicitante           uuid         [not null, ref: > usuario.id, note: 'FK cross-módulo → M1 IAM']
  id_curso                 uuid         [not null, ref: > curso.id, note: 'FK cross-módulo → M2 Acadêmico']
  estado                   varchar(30)  [not null, default: 'ABERTA']
  dados                    jsonb        [not null, default: `'{}'`, note: 'payload do form_schema; inclui linhas por disciplina (não há request_line_item)']
  parecer                  text
  prazo_em                 timestamptz  [note: 'nullable no Flyway V004']
  concluded_at             timestamptz
  deleted_at               timestamptz
  id_request_type_version  uuid         [ref: > request_type_version.id, note: 'V019']
  created_at               timestamptz  [not null, default: `now()`]
  updated_at               timestamptz  [not null, default: `now()`]

  Indexes {
    (numero_anual, ano, id_curso) [unique, note: 'protocolo único por curso/ano']
    id_solicitante [name: "idx_request_solicitante"]
    id_request_type [name: "idx_request_tipo"]
    id_curso [name: "idx_request_curso"]
    id_request_type_version [name: "idx_request_type_version_fk"]
  }
}

// Histórico de transições (V004 + updated_at V018)
Table request_event {
  id              uuid         [pk, not null]
  id_request      uuid         [not null, ref: > request.id]
  tipo            varchar(50)  [not null]
  estado_anterior varchar(30)  [not null, note: 'NOT NULL no Flyway (inclusive OPENED)']
  estado_novo     varchar(30)  [not null]
  id_ator         uuid         [not null, ref: > usuario.id, note: 'FK cross-módulo → M1 IAM']
  parecer         text
  created_at      timestamptz  [not null, default: `now()`]
  updated_at      timestamptz  [not null, default: `now()`, note: 'V018 — BaseEntity']

  Indexes {
    id_request [name: "idx_request_event_request"]
  }
}

Table request_attachment {
  id            uuid         [pk, not null]
  id_request    uuid         [not null, ref: > request.id]
  categoria     varchar(100) [not null]
  storage_key   varchar(500) [not null, note: 'chave no MinIO/S3']
  sha256        varchar(64)  [not null]
  nome_original varchar(300) [not null]
  content_type  varchar(100) [not null, note: 'V004: content_type, não mime_type']
  tamanho_bytes bigint       [not null]
  created_at    timestamptz  [not null, default: `now()`]
  updated_at    timestamptz  [not null, default: `now()`, note: 'V018 — BaseEntity']

  Indexes {
    id_request [name: "idx_request_attachment_request"]
  }

  Note: 'V004: sem uploaded_by, sem status (I11-a não materializada)'
}

// ============================================================
// FKs cross-módulo originadas neste módulo M3
// ============================================================
// request.id_solicitante              →  usuario.id              (M1 IAM)
// request.id_curso                    →  curso.id                (M2 Acadêmico)
// request_event.id_ator               →  usuario.id              (M1 IAM)
// request.id_request_type_version     →  request_type_version.id (mesmo módulo — V019)
// request_type_version.id_request_type → request_type.id         (mesmo módulo — V019)
// SEM request_line_item.id_disciplina (tabela não existe no Flyway)
// SEM request_attachment.uploaded_by  (coluna não existe no V004)
// ============================================================
// FKs cross-módulo recebidas (outros módulos apontam para M3)
// ============================================================
// M2  calendario_academico.id_request_type → request_type.id
// ============================================================
